--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -32,7 +32,7 @@ const isRTL = lang === 'ar';
           <img src="/images/veblabslogoblue.webp" alt="VebLabs Logo" class="w-6 h-6 p-1" />
           {isRTL ? (
             <span class="text-xl font-bold">
-              <span class="text-light-textPrimary dark:text-dark-textPrimary">فيب</span>
+              <span class="text-light-textPrimary dark:text-dark-textPrimary">ڤيب</span>
               <span class="text-light-primary dark:text-dark-primary">لابز</span>
             </span>
           ) : (
@@ -163,7 +163,7 @@ const isRTL = lang === 'ar';
           <img src="/images/veblabslogoblue.webp" alt="Logo" class="h-4 w-auto" />
           {isRTL ? (
             <span class="text-xl font-bold">
-              <span class="text-light-textPrimary dark:text-dark-textPrimary">فيب</span>
+              <span class="text-light-textPrimary dark:text-dark-textPrimary">ڤيب</span>
               <span class="text-light-primary dark:text-dark-primary">لابز</span>
             </span>
           ) : (
