--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -107,10 +107,11 @@ const getPageTypeFromURL = (path: string): Props['pageType'] => {
 const currentPageType = pageType || getPageTypeFromURL(pathname);
 
 // Create language-specific title
-const languageLabel = lang === 'ar' ? ' | العربية' : ' | English';
 const pageTitle = title 
-  ? `${title}${languageLabel} - VEB Labs` 
-  : `VEB Labs${languageLabel} - Web Design & Development Agency in Dubai`;
+  ? `${title} | VEB Labs`
+  : lang === 'ar'
+    ? 'فيب لابز | تصميم وتطوير مواقع احترافية'
+    : 'VEB Labs | Professional Web Design & Development';
 
 // Create language-specific meta description
 const pageDescription = description || (lang === 'ar' 
@@ -162,13 +163,18 @@ const schemaOrgData = {
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
-    <meta http-equiv="Pragma" content="no-cache" />
-    <meta http-equiv="Expires" content="0" />
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+    <link rel="canonical" href={canonicalURL} />
+    
+    <!-- Favicons -->
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
     
     <!-- SEO -->
     <title>{pageTitle}</title>
     <meta name="description" content={pageDescription} />
-    <link rel="canonical" href={canonicalURL} />
     
     <!-- Hreflang tags -->
     {hreflangTags.map(({ href, hreflang }) => (
@@ -288,9 +294,6 @@ const schemaOrgData = {
 
 
     <!-- Favicon -->
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
     <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
     <link rel="manifest" href="/site.webmanifest" />
     <GoogleAnalytics />
